<resources>
    <string name="app_name">final_electivas_programacion</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="titulo_app">LAUM AIRLINES</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="comleta_datos">Completa tus datos</string>
    <string name="DNI">D.N.I</string>
    <string name="volver">Volver</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tab_1">Vuelos</string>
    <string name="tab_2">Reservas</string>
    <string name="tab_3">Configuración</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="administrador">Administrador</string>
    <string name="vuelos">Vuelos</string>
    <string name="agregar_vuelo">Agregar Vuelo</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="fecha">Fecha</string>
    <string name="confirmar">Confirmar</string>
    <string name="fecha_partida">Fecha Partida</string>
    <string name="fecha_llegada">Fecha Llegada</string>
    <string name="codigo">Codigo</string>
    <string name="horario_partida">Partida</string>
    <string name="horario_destino">Destino</string>
    <string name="reserva">Reserva</string>
    <string name="buscar">Buscar</string>
    <string name="nro_reserva">Número de Reserva</string>
    <string name="fecha_hasta">Hasta</string>
    <string name="fecha_desde">Desde</string>
    <string name="cant_personas">Cantidad de pasajeros</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="salir">Salir</string>
    <string name="porcentajeRestriccion">Porcentaje de Restricción</string>
    <string name="avion">Avion</string>
    <string name="sin_fecha">Aún no he decidido la fecha</string>
    <string name="turista">Turista</string>
    <string name="primera">Primera</string>
    <string name="tarifas">Tarifa</string>
    <string name="monto">$ (Valor en Pesos)</string>
    <string name="enviar">Enviar</string>
    <string name="pago">Pago</string>
    <string name="aclaracion">Escanee el código QR para proseguir con el pago y luego de confirmarlo será redirigdo al menu principal.</string>
    <string name="modificar">Modificar datos</string>
</resources>