<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp">

        <Button
            android:id="@+id/ButtonTuristaPT"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato"
            android:text="@string/turista"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/ButtonPrimeraPT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ButtonPrimeraPT"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato"
            android:text="@string/primera"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ButtonTuristaPT"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPrecioPT"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distancia_campos_registro"
        android:hint="@string/monto"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ButtonEnviarPT"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="320sp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="280sp"
        android:fontFamily="@font/lato"
        android:text="@string/enviar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonVolverPT"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/lato"
        android:text="@string/volver"
        android:textSize="20sp" />

</LinearLayout>