<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PantallaMenuPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textViewBienvenidosPMP"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/administrador"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/botones_bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBienvenidosPMP">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/buttonVuelosPA"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:contentDescription="@string/vuelos"
            android:fontFamily="@font/lato_bold"
            android:text="@string/vuelos"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBienvenidosPMP" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buttonSalirPMP"
        android:layout_width="320dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/salir"
        android:fontFamily="@font/lato_bold"
        android:text="@string/salir"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botones_bienvenida"/>

</LinearLayout>