<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/formulario_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewTituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50sp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/recuperar"
            android:textAlignment="center"
            android:textSize="30sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDNIPRC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DNI"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsuarioPLC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:inputType="number|textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ButtonRecuperarPRC"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="320sp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250sp"
            android:fontFamily="@font/lato"
            android:text="@string/recuperar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ButtonVolverPRC"
            style="@style/Widget.Material3.Button"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/lato"
            android:text="@string/volver"
            android:textSize="15sp" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>